--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">KBJ</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Bangkit</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
