--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
+                            <img src="https://github.com/krisnamughni24/Krisna-Bangkit-Journey/blob/main/images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
                         </div>
 
                     </div>
