--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="https://github.com/krisnamughni24/Krisna-Bangkit-Journey/blob/main/images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello guys!</h1>
                                 </div>
@@ -89,7 +89,7 @@
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="https://github.com/krisnamughni24/Krisna-Bangkit-Journey/blob/main/images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
+                            <img src="images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
                         </div>
 
                     </div>
@@ -112,7 +112,7 @@
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img src="https://github.com/krisnamughni24/Krisna-Bangkit-Journey/blob/main/images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
+                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="pt-2 mb-3">a little bit about Joshua</h3>
