--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                                     <img src="images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <h3 class="pt-2 mb-3">a little bit about Joshua</h3>
+                                <h3 class="pt-2 mb-3">Krisna Mughni</h3>
 
-                                <p>This one-page HTML portfolio is provided by <a href="https://templatemo.com" target="_blank">TemplateMo</a>. This layout is based on Bootstrap v5.1.3 CSS and JS libraries. Image credits go to <a href="https://unsplash.com" target="_blank">Unsplash</a> and <a href="https://freepik.com" target="_blank">FreePik</a> for images used in this page.</p>
+                                <p>/a>Dedicated and motivated Back End Engineer with a passion for developing innovative and efficient solutions to complex problems..</p>
 
-                                <p>You are allowed to use this template for your websites. You are not allowed to redistribute the template ZIP file on any other website. Please <a href="https://templatemo.com/contact" target="_blank">contact us</a> for more info.</p>
+                                <p>Additionally, I am also interested in the intersection of technology and creativity and have a keen interest in audio/music production, Game Dev, 3D modeling, and the use of DL/AI in these areas.</p>
                             </div>
                         </div>
 
@@ -133,7 +133,7 @@
                     <div class="row align-items-center">
 
                         <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">Companies I've had worked</h3>
+                            <h3 class="text-center mb-5">My Skill Set</h3>
                         </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
@@ -271,7 +271,7 @@
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
                                 <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Projects</h2>
+                                <h2 class="text-white ms-4 mb-0">Certificate's</h2>
                             </div>
                         </div>
 
@@ -280,9 +280,9 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">COURSERA</small>
 
-                                    <h3 class="projects-title">Zoik agency</h3>
+                                    <h3 class="projects-title">Google IT Automation with Python</h3>
                                 </div>
 
                                 <a href="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="popup-image">
@@ -294,9 +294,9 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">COURSERA</small>
 
-                                    <h3 class="projects-title">The Watch</h3>
+                                    <h3 class="projects-title">Google Data Analytics</h3>
                                 </div>
 
                                 <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
@@ -308,9 +308,9 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">COURSERA</small>
 
-                                    <h3 class="projects-title">Polo</h3>
+                                    <h3 class="projects-title">Mathematics for Machine Learning</h3>
                                 </div>
 
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
@@ -339,7 +339,7 @@
 
                             <div class="col-lg-3 col-md-6 col-12 pe-lg-0">
                                 <div class="contact-info contact-info-border-start d-flex flex-column">
-                                    <strong class="site-footer-title d-block mb-3">Services</strong>
+                                    <strong class="site-footer-title d-block mb-3">Article's</strong>
 
                                     <ul class="footer-menu">
                                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Websites</a></li>
